thumbnail size fix on mobile

--- a/src/styles/_trailers.scss
+++ b/src/styles/_trailers.scss
@@ -27,7 +27,7 @@
                 }
 
                 @media (max-width: 768px) {
-                    max-width: 100vw;
+                    max-width: 99vw;
                 }
             }
         }
@@ -47,7 +47,7 @@
                 }
 
                 img {
-                    height: 175px;
+                    height: clamp(100px, 10vw, 175px);
                 }
     
                 &--is-active {
